# dx-engine

./: .gitattributes  CMakeLists.txt  README.md
AssestImport/: AssimpT.cpp  AssimpT.h  CMakeLists.txt  Command.h  Exporter.cpp  Exporter.h  ExternalImporter.cpp  ExternalImporter.h  File.cpp  File.h  Importer.cpp  Importer.h  Main.cpp  ModelImporter.cpp  ModelImporter.h
DxMain/: Box.fbx  Defines.h  Global.h  Main.cpp  color.fx  dx.xml  pinkColor.fx
DxMath/: CMakeLists.txt  Color.cpp  Matrix.cpp  Vector.cpp  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
DxMath/inc/: Color.h  MathB.h  Matrix.h  Vector.h
DxWrapper/: BlendState.cpp  Buffer.cpp  CMakeLists.txt  ComputeShader.cpp  DXObject.cpp  Data.cpp  Device.cpp  DomainShader.cpp  DrawCommand.cpp  Effect.cpp  GeometryShader.cpp  GeometryStreamOutputShader.cpp  GpuResourceManager.cpp  GraphicState.cpp  HullShader.cpp  LayoutElement.cpp  MapData.cpp  PipeLineBuffer.cpp  PipeLineDepthStencil.cpp  PipeLineRenderTarget.cpp  PipeShadersParams.cpp  PipeState.cpp  PixelShader.cpp  RenderDevice.cpp  RenderState.cpp  Resource.cpp  ResourceManager.cpp  ResourceView.cpp  Sampler.cpp  Shader.cpp  ShaderParams.cpp  ShaderResource.cpp  ShaderResourceInfo.cpp  Texture.cpp  Texture2D.cpp  TextureData.cpp  UnorderedView.cpp  UnorderedViewInfo.cpp  VertexShader.cpp  VideoAdapter.cpp  (+3 more)
DxWrapper/inc/: BlendState.h  Buffer.h  ComputeShader.h  DXGame.h  DXObject.h  DXTypes.h  Data.h  Device.h  DomainShader.h  DrawCommand.h  DxEnums.h  Effect.h  GeometryShader.h  GeometryStreamOutputShader.h  GpuResourceManager.h  GraphicState.h  HullShader.h  LayoutElement.h  MapData.h  PipeLineBuffer.h  PipeLineDepthStencil.h  PipeLineRenderTarget.h  PipeShadersParams.h  PipeState.h  PixelShader.h  RenderDevice.h  RenderState.h  Resource.h  ResourceManager.h  ResourceManagerT.cpp  ResourceView.h  Sampler.h  Shader.h  ShaderParams.h  ShaderResource.h  ShaderResourceInfo.h  Texture.h  Texture2D.h  TextureData.h  UnorderedView.h  (+6 more)
GeneralTesting/: CMakeLists.txt  GObjectMock.h  GObjectTesting.cpp  GUMock.h  GUbjectMock.h  GameTesting.cpp  GameTimeMock.h  GeneralTesting.cpp  GraphicStateMock.h  InputLayoutTesting.cpp  MathTesting.cpp  TimeTesting.cpp
Include/: BaseLog.h  Engine.h
PerformanceTesting/: ArcCamera.cpp  ArcCamera.h  CMakeLists.txt  Dx11DemoBase.cpp  Dx11DemoBase.h  EmptyGame.cpp  ModelsDemo.cpp  ModelsDemo.h  SmallGame.cpp  TokenStream.cpp  WhiteColor.fx  objLoader.cpp
cmake-modules/: AddAssimp.cmake  AddEffect.cmake  AddGTest.cmake  AddLZ4.cmake  AddLogging.cmake  AddManMem.cmake
dxResourceManager/: CMakeLists.txt  DataManager.cpp  FileData.cpp  ModelData.cpp  ModelDataHelper.h  ResourceData.cpp  ResourceData.h
dxResourceManager/inc/: DataManager.h  DataManagerT.cpp  FileData.h  ModelData.h  SubSet.h
dxgame/: AnimateModel.cpp  AnimateModel.h  BaseLog.cpp  BufferCreateException.cpp  BufferSizeNotMatch.cpp  BufferSizeNotMatch.h  CMakeLists.txt  DXException.cpp  DXMain.cpp  DxHandler.cpp  DxHandler.h  DxResException.cpp  EObject.cpp  GOEntity.cpp  GObject.cpp  GObjectContainer.cpp  GObjectContainer.h  Game.cpp  GameTime.cpp  GeneralException.cpp  InstanceModel.cpp  InstanceModel.h  Material.cpp  Material.h  Model.cpp  PipeLineState.cpp  ResourceException.cpp  ShaderState.cpp  State.cpp  UObject.cpp
dxgame/inc/: BufferCreateException.h  BufferException.h  DXException.h  DXMain.h  DxResException.h  EObject.h  GOEntity.h  GObject.h  GPUException.h  Game.h  GameTime.h  GeneralException.h  Model.h  PipeLineState.h  ResourceException.h  ShaderState.h  State.h  UObject.h
